--- a/envs/az_tf_cv_mtcnn.yaml
+++ b/envs/az_tf_cv_mtcnn.yaml
@@ -1,4 +1,4 @@
-name: tfonly
+name: tfmtcnn
 channels:
   - apple
 dependencies:
@@ -7,6 +7,8 @@ dependencies:
   - tensorflow-deps
   - openblas
   - pip:
-    - tensorflow-macos
-    - tensorflow-metal
+    - azureml-defaults
+    - tensorflow-cpu
     - pillow
+    - mtcnn
+    - opencv-python
